force-app/main/default/objects/Mass_Account_Transfer__c/Mass_Account_Transfer__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting will say which user will be able to use Explicit Mass Account Owner transfer with Case, contact and Opportunity</description>
    <label>Mass Account Transfer</label>
</CustomObject>