force-app/main/default/objects/Mass_Account_Transfer__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <defaultValue>&quot;Same&quot;</defaultValue>
    <description>Change Type is for whether update All the related records, or only with same owner as earlier etc.
 We will use &quot;All&quot;,&quot;Same&quot; as value as required.</description>
    <inlineHelpText>Please use &quot;All&quot;, &quot;Same&quot; or emply</inlineHelpText>
    <label>Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>