force-app/main/default/objects/Mass_Account_Transfer__c/fields/Records_for_Mass__c.field-meta.xml
<CustomField>
    <fullName>Records_for_Mass__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Number of records that would be considered for Mass update from DataLoader. This is used in trigger .</description>
    <inlineHelpText>Minimum number of records that would be considered as the transaction is for Mass update</inlineHelpText>
    <label>Min Records for Mass</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>