force-app/main/default/objects/Mass_Account_Transfer__c/fields/RelatedObjects__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjects__c</fullName>
    <defaultValue>&quot;Opportunity;Contact;Case&quot;</defaultValue>
    <label>RelatedObjects</label>
    <type>TextArea</type>
</CustomField>